apps/qbittorrent/app.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-mullvad-vpn
spec:
  selector: app == 'qbittorrent'
  egress:
  - action: Allow
    protocol: UDP
    destination:
      nets:
        - 185.213.154.69/32
      ports:
        - 51820
  - action: Allow
    protocol: TCP
    source:
      namespaceSelector: kubernetes.io/metadata.name == 'servarr'

---
kind: Service
apiVersion: v1
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
    - port: 80
      targetPort: 8080

---
kind: StatefulSet
apiVersion: apps/v1
metadata:
  name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      name: qbittorrent
      labels:
        app: qbittorrent
    spec:
      containers:
        - name: wireguard
          image: jordanpotter/wireguard
          volumeMounts:
            - name: wireguard
              mountPath: /etc/wireguard/
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
            sysctls:
              - name: net.ipv4.conf.all.src_valid_mark
                value: "1"
        - name: qbittorrent
          image: hotio/qbittorrent:release
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: config
              mountPath: /config
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: wireguard
          secret:
            secretName: mullvad-vpn
            optional: false
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
